--- a/hirchess.cabal
+++ b/hirchess.cabal
@@ -22,3 +22,23 @@ executable hirchess
   build-depends:       base >=4.5 && <4.6, array >=0.4 && <0.5
   -- hs-source-dirs:
   default-language:    Haskell2010
+
+Test-Suite spec
+  Type:                 exitcode-stdio-1.0
+  Default-Language:     Haskell2010
+  Hs-Source-Dirs:       test, .
+  Ghc-Options:          -Wall
+  Main-Is:              Spec.hs
+  Build-Depends:        base
+                        , hspec >= 1.5
+                        , QuickCheck
+
+Test-Suite unit
+  Type:                 exitcode-stdio-1.0
+  Default-Language:     Haskell2010
+  Hs-Source-Dirs:       test, .
+  Ghc-Options:          -Wall
+  Main-Is:              UnitTests.hs
+  Build-Depends:        base
+                        , HUnit
+                        , QuickCheck
