--- a/hirchess.cabal
+++ b/hirchess.cabal
@@ -20,13 +20,13 @@ executable hirchess
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.5 && <4.6, array >=0.4 && <0.5
-  -- hs-source-dirs:
+  hs-source-dirs:      src
   default-language:    Haskell2010
 
 Test-Suite spec
   Type:                 exitcode-stdio-1.0
   Default-Language:     Haskell2010
-  Hs-Source-Dirs:       test, .
+  Hs-Source-Dirs:       test, src
   Ghc-Options:          -Wall
   Main-Is:              Spec.hs
   Build-Depends:        base
@@ -36,7 +36,7 @@ Test-Suite spec
 Test-Suite unit
   Type:                 exitcode-stdio-1.0
   Default-Language:     Haskell2010
-  Hs-Source-Dirs:       test, .
+  Hs-Source-Dirs:       test, src
   Ghc-Options:          -Wall
   Main-Is:              UnitTests.hs
   Build-Depends:        base
