--- a/hirchess.cabal
+++ b/hirchess.cabal
@@ -23,6 +23,12 @@ executable hirchess
   hs-source-dirs:      src
   default-language:    Haskell2010
 
+executable chessbot
+  main-is:             ChessBot.hs
+  build-depends:       base >=4.5 && <4.6, array >=0.4 && <0.5, network
+  hs-source-dirs:      src
+  default-language:    Haskell2010
+
 Test-Suite spec
   Type:                 exitcode-stdio-1.0
   Default-Language:     Haskell2010
