--- a/hirchess.cabal
+++ b/hirchess.cabal
@@ -19,13 +19,13 @@ executable hirchess
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.5 && <4.6, array >=0.4 && <0.5
+  build-depends:       base >=4.5, array >=0.4 && <0.5
   hs-source-dirs:      src
   default-language:    Haskell2010
 
 executable chessbot
   main-is:             ChessBot.hs
-  build-depends:       base >=4.5 && <4.6, array >=0.4 && <0.5, network
+  build-depends:       base >=4.5, array >=0.4 && <0.5, network
   hs-source-dirs:      src
   default-language:    Haskell2010
 
