--- a/hirchess.cabal
+++ b/hirchess.cabal
@@ -19,15 +19,20 @@ executable hirchess
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.5, array >=0.4 && <0.5
   hs-source-dirs:      src
   default-language:    Haskell2010
+  build-depends:       base >=4.5
+                       , array >=0.4 && <0.5
+                       , hchesslib
 
 executable chessbot
   main-is:             ChessBot.hs
-  build-depends:       base >=4.5, array >=0.4 && <0.5, network
   hs-source-dirs:      src
   default-language:    Haskell2010
+  build-depends:       base >=4.5
+                       , array >=0.4 && <0.5
+                       , network
+                       , hchesslib
 
 Test-Suite spec
   Type:                 exitcode-stdio-1.0
@@ -37,16 +42,5 @@ Test-Suite spec
   Main-Is:              Spec.hs
   Build-Depends:        base
                         , hspec >= 1.5
-                        , QuickCheck
-                        , array >=0.4 && <0.5
-
-Test-Suite unit
-  Type:                 exitcode-stdio-1.0
-  Default-Language:     Haskell2010
-  Hs-Source-Dirs:       test, src
-  Ghc-Options:          -Wall
-  Main-Is:              UnitTests.hs
-  Build-Depends:        base
-                        , HUnit
                         , QuickCheck
                         , array >=0.4 && <0.5
