--- a/hirchess.cabal
+++ b/hirchess.cabal
@@ -44,3 +44,12 @@ Test-Suite spec
                         , hspec >= 1.5
                         , QuickCheck
                         , array >=0.4 && <0.5
+
+Test-suite hlint
+  type:                 exitcode-stdio-1.0
+  Default-language:     Haskell2010
+  Hs-source-dirs:       src, test
+  Main-is:              HLint.hs
+
+  Build-depends:        base >= 4 && < 5
+                        , hlint >= 1.8
