--- a/hirchess.cabal
+++ b/hirchess.cabal
@@ -19,26 +19,28 @@ executable hirchess
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  hs-source-dirs:      src
-  default-language:    Haskell2010
-  build-depends:       base >=4.5
-                       , array >=0.4 && <0.5
-                       , hchesslib
+  hs-source-dirs:       src
+  Ghc-Options:          -Wall -Werror
+  default-language:     Haskell2010
+  build-depends:        base >=4.5
+                        , array >=0.4 && <0.5
+                        , hchesslib
 
 executable chessbot
-  main-is:             ChessBot.hs
-  hs-source-dirs:      src
-  default-language:    Haskell2010
-  build-depends:       base >=4.5
-                       , array >=0.4 && <0.5
-                       , network
-                       , hchesslib
+  main-is:              ChessBot.hs
+  hs-source-dirs:       src
+  Ghc-Options:          -Wall -Werror
+  default-language:     Haskell2010
+  build-depends:        base >=4.5
+                        , array >=0.4 && <0.5
+                        , network
+                        , hchesslib
 
 Test-Suite spec
   Type:                 exitcode-stdio-1.0
   Default-Language:     Haskell2010
   Hs-Source-Dirs:       test, src
-  Ghc-Options:          -Wall
+  Ghc-Options:          -Wall -Werror
   Main-Is:              Spec.hs
   Build-Depends:        base
                         , hspec >= 1.5
